package com.core.common

object TestTags{

    const val AUTH_ERROR_MESSAGE = "auth_error_message"
    const val LOGIN_EMAIL_OR_USERNAME_INPUT = "login_email_or_username_input"
    const val AUTH_PASSWORD_INPUT = "auth_password_input"
    const val AUTH_CONFIRMATION_BUTTON = "auth_confirmation_button"
    const val NAVIGATION_BETWEEN_LOGIN_SIGNUP = "navigation_between_login_signup"
    const val LOGIN_SCREEN = "login_screen"
    const val SIGN_UP_SCREEN = "sign_up_screen"
    const val SIGNUP_EMAIL_INPUT = "signup_email_input"
    const val SIGNUP_USERNAME_INPUT = "signup_username_input"
    const val SIGNUP_FULLNAME_INPUT = "signup_fullname_input"
    const val SIGNUP_PASSWORD_CONFIRMATION_INPUT = "signup_password_confirmation_input"
    const val PASSWORD_VISIBILITY_TOGGLE = "password_visibility_toggle"
    const val HOME_SCREEN = "home_screen"
}